--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script
+    <!-- <script
       crossorigin="anonymous"
       src="//unpkg.com/react-scan/dist/auto.global.js"
-    ></script>
+    ></script> -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
